--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,75 @@
-gunicorn==20.1.0
+appnope==0.1.3
+asttokens==2.2.1
+autopep8==1.6.0
+backcall==0.2.0
+behave==1.2.6
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.0.4
+comm==0.1.2
+contourpy==1.0.7
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+distlib==0.3.6
+dnspython==2.2.1
+dominate==2.6.0
+email-validator==1.1.3
+executing==1.2.0
+filelock==3.9.0
+Flask==2.0.3
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+fonttools==4.38.0
+greenlet==2.0.2
+idna==3.3
+ipykernel==6.21.2
+ipython==8.11.0
+itsdangerous==2.1.1
+jedi==0.18.2
+Jinja2==3.0.3
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+kiwisolver==1.4.4
+markup==0.2
+MarkupSafe==2.1.0
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.24.2
+packaging==23.0
+pandas==1.5.3
+parse==1.19.0
+parse-type==0.6.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==3.0.0
+prompt-toolkit==3.0.38
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.8.0
+Pygments==2.14.0
+pyparsing==3.0.9
+pyswip==0.2.10
+python-dateutil==2.8.2
+pytz==2022.7.1
+pyzmq==25.0.0
+requests==2.28.2
+scipy==1.10.1
+six==1.16.0
+SQLAlchemy==1.4.32
+stack-data==0.6.2
+toml==0.10.2
+tornado==6.2
+traitlets==5.9.0
+urllib3==1.26.14
+virtualenv==20.19.0
+visitor==0.1.3
+wcwidth==0.2.6
+Werkzeug==2.0.3
+WTForms==3.0.1
